Fix music overlay title word wrap

--- a/static/css/music_overlay.css
+++ b/static/css/music_overlay.css
@@ -74,4 +74,8 @@
 
 .title {
     margin-bottom: 0.5rem;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+    word-wrap: break-word;
+    word-break: break-all;
 }
